<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="ButtonChat">Start Chat</string>
    <string name="ButtonSend">Send</string>
    <string name="ButtonToolbar">Test Toolbar</string>
    <string name="ButtonWeather">Weather</string>
    <string name="LoginText">Login</string>
    <string name="LoginName">Login name</string>
    <string name="PWText">Password</string>
    <string name="SwitchText">What does this do?</string>
    <string name="DialogMsg">Finish activity?</string>
    <string name="DialogTitle">Attention!</string>
    <string name="DialogYes">OK</string>
    <string name="DialogNo">Cancel</string>
    <string name="ToastSwitchOn">Switch is On</string>
    <string name="ToastSwitchOff">Switch is Off</string>
    <string name="ListItemsActivityResponse">ListItemsActivity passed: User pressed "OK"</string>
    <string name="title_activity_test_toolbar">Test toolbar</string>
    <string name="Action1">One</string>
    <string name="Action2">Two</string>
    <string name="Action3">Three</string>
    <string name="ActionAbout">About</string>
    <string name="ToastVersion">Version 1.0, by Julius Fan</string>
    <string name="SnackbarAction1">You selected item 1</string>
    <string name="DialogToolbar">Do you want to go back?</string>
    <string name="SnackbarLetter">Floating action clicked</string>
    <string name="DialogNewMessageHint">New message</string>
    <string name="CurrentTemp">Current Temperature</string>
    <string name="MaxTemp">Max Temperature</string>
    <string name="MinTemp">Min Temperature</string>
    <string name="ButtonDeleteMsg">Delete This Message</string>
    <string name="MessageHere">MessageHere</string>
    <string name="IdDeleteMsg">ID=</string>
</resources>
