<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_one"
        android:title="@string/Action1"
        android:icon="@drawable/icons_clubs"
        android:orderInCategory="101"
        app:showAsAction="always"/>

    <item android:id="@+id/action_two"
        android:title="@string/Action2"
        android:icon="@drawable/icons_hearts"
        android:orderInCategory="102"
        app:showAsAction="always"/>

    <item android:id="@+id/action_three"
        android:title="@string/Action3"
        android:icon="@drawable/icons_spades"
        android:orderInCategory="103"
        app:showAsAction="always"/>

    <item android:id="@+id/action_about"
        android:title="About"
        android:orderInCategory="104"
        app:showAsAction="never"/>

</menu>