<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_message_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/MessageHere" />

    <TextView
        android:id="@+id/text_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_message_here"
        android:gravity="end"
        android:layout_marginTop="20dp"
        android:text="@string/IdDeleteMsg" />

    <Button
        android:id="@+id/delete_msg_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/ButtonDeleteMsg" />

</RelativeLayout>